--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,15 +1,10 @@
 .page-header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   width: 320px;
-  padding-top: 25px;
-  padding-bottom: 30px;
+  padding-top: 27px;
+  padding-bottom: 31px;
   background-color: @dark-blue;
   box-sizing: border-box;
-}
-
-.container {
-  padding-right: 25px;
-  padding-left: 25px;
-  margin: 0 auto;
 }
