--- a/source/less/font-face.less
+++ b/source/less/font-face.less
@@ -18,6 +18,6 @@
   font-family: "Blogger Sans";
   src: url("../fonts/bloggersans-light.woff2") format("woff2"),
     url("../fonts/bloggersans-light.woff") format("woff");
-  font-weight: light;
+  font-weight: lighter;
   font-style: normal;
 }
