Начальная  Стилизация страниц

--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,16 +1,19 @@
 .map__wrapper {
+  display: flex;
+  flex-direction: column;
   background-color: @yellow;
 
   border-radius: 0 0 20px 20px;
 }
 
 .map__adress {
-  margin: 0;
+  margin: 35px 0;
   padding: 0 60px;
   .text-bold;
   text-transform: uppercase;
 }
 
 .map__make-route {
+  margin-bottom: 35px;
   border: 3px solid @dark-blue--text;
 }
