--- a/source/less/font-face.less
+++ b/source/less/font-face.less
@@ -21,3 +21,11 @@
   font-weight: lighter;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Blogger Sans";
+  src: url("../fonts/bloggersans-medium.woff2") format("woff2"),
+    url("../fonts/bloggersans-medium.woff") format("woff");
+  font-weight: medium;
+  font-style: normal;
+}
