--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,3 +23,8 @@
 @import url("blocks/tariffs.less");
 @import url("blocks/contacts-us.less");
 @import url("blocks/map.less");
+@import url("blocks/page-footer.less");
+@import url("blocks/inner-page.less");
+@import url("blocks/companions-filter.less");
+@import url("blocks/inner-companions.less");
+@import url("blocks/countries-list.less");
