--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -6,3 +6,31 @@
 
   list-style: none;
 }
+
+.social__item {
+  position: relative;
+  width: 45px;
+  height: 45px;
+
+  background-color: @yellow;
+  border-radius: 50%;
+}
+
+.social__link {
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+}
+
+.social__link--facebook {
+  transform: translate(-5px, -10px);
+}
+
+.social__link--vkontakte {
+  transform: translate(-12px, -6px);
+}
+
+.social__link--instagram {
+  transform: translate(-9px, -9px);
+}
