ивсправлена цетровка блоков

--- a/source/less/blocks/contacts-us.less
+++ b/source/less/blocks/contacts-us.less
@@ -3,8 +3,14 @@
   flex-direction: column;
   justify-content: center;
 
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
+
   background-color: @dark-blue--text;
   border-radius: 0 0 20px 20px;
+  box-sizing: border-box;
 }
 
 .contacts-us__title {
