--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,9 +1,15 @@
 .map__wrapper {
   display: flex;
   flex-direction: column;
-  background-color: @yellow;
 
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
+
+  background-color: @yellow;
   border-radius: 0 0 20px 20px;
+  box-sizing: border-box;
 }
 
 .map__adress {
