--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,6 +4,9 @@
   align-items: center;
 
   width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
   padding-top: 35px;
 
   background-color: white;
