--- a/source/less/blocks/popular-route.less
+++ b/source/less/blocks/popular-route.less
@@ -1,8 +1,15 @@
 .popular-route {
   display: flex;
   flex-direction: column;
+
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
+
   background-color: @gray;
   border-radius: 0 0 20px 20px;
+  box-sizing: border-box;
 }
 
 .popular-route__title {
