--- a/source/less/blocks/service-info.less
+++ b/source/less/blocks/service-info.less
@@ -1,11 +1,19 @@
 .service-info {
   display: flex;
   flex-direction: column;
+
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
   padding-bottom: 65px;
+
 
   background-color: @dark-blue--text;
   background-image: url("../img/about-mobile@1x.png");
   border-radius: 0 0 20px 20px;
+
+  box-sizing: border-box;
 }
 
 .service-info__title {
