--- a/source/less/blocks/action-plan.less
+++ b/source/less/blocks/action-plan.less
@@ -5,9 +5,9 @@
 .action-plan__list {
   display: flex;
   flex-direction: column;
-  width: 270px;
+  width: 320px;
   margin: 0;
-  padding: 0 0 40px;
+  padding: 0 25px 40px;
 
   list-style: none;
   box-sizing: border-box;
