--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -2,8 +2,15 @@
   display: flex;
   flex-direction: column;
 
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
+
   background-color: @dark-blue--text;
   border-radius: 0 0 20px 20px;
+
+  box-sizing: border-box;
 }
 
 .companions__title {
