--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,6 +1,7 @@
-.container {
-  padding-right: 25px;
-  padding-left: 25px;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
+// .container {
+//   width: 320px;
+//   padding-right: 25px;
+//   padding-left: 25px;
+//   margin: 0 auto;
+//   box-sizing: border-box;
+// }
