--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,6 +3,9 @@
   justify-content: space-between;
   align-items: flex-start;
   width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
   padding-top: 27px;
   padding-bottom: 31px;
   background-color: @dark-blue;
