--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,11 @@
 .page-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
 }
 
 .page-main__wrapper {
@@ -25,5 +31,6 @@
 .page-main__links {
   position: absolute;
 
+  left: 25px;
   bottom: -25px;
 }
