--- a/source/less/blocks/tariffs.less
+++ b/source/less/blocks/tariffs.less
@@ -2,7 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+
+  width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
   padding-bottom: 40px;
+
   background-color: @gray;
 
   box-sizing: border-box;
