--- a/source/less/font-face.less
+++ b/source/less/font-face.less
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Blogger Sans";
-  src: url("../fonts/bloggersans.woff2") format("woff2"),
-    url("../fonts/bloggersans.woff") format("woff");
+  src: url("../../fonts/bloggersans.woff2") format("woff2"),
+    url("../../fonts/bloggersans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Blogger Sans";
-  src: url("../fonts/bloggersans-bold.woff2") format("woff2"),
-    url("../fonts/bloggersans-bold.woff") format("woff");
+  src: url("../../fonts/bloggersans-bold.woff2") format("woff2"),
+    url("../../fonts/bloggersans-bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Blogger Sans";
-  src: url("../fonts/bloggersans-light.woff2") format("woff2"),
-    url("../fonts/bloggersans-light.woff") format("woff");
+  src: url("../../fonts/bloggersans-light.woff2") format("woff2"),
+    url("../../fonts/bloggersans-light.woff") format("woff");
   font-weight: lighter;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Blogger Sans";
-  src: url("../fonts/bloggersans-medium.woff2") format("woff2"),
-    url("../fonts/bloggersans-medium.woff") format("woff");
+  src: url("../../fonts/bloggersans-medium.woff2") format("woff2"),
+    url("../../fonts/bloggersans-medium.woff") format("woff");
   font-weight: medium;
   font-style: normal;
 }
