--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,7 @@
 @import url("global.less");
 @import url("variables.less");
 @import url("mixins.less");
-@import url("font-face.less.less");
+@import url("font-face.less");
 @import url("blocks/page-header.less");
 @import url("blocks/main-nav.less");
 @import url("blocks/menu.less");
