Начала адаптровать блоки

--- a/source/less/blocks/action-plan.less
+++ b/source/less/blocks/action-plan.less
@@ -1,5 +1,11 @@
 .action-plan {
-  background: linear-gradient(to bottom, #161c35 80px, #192144 80px);
+  position: relative;
+  background-color: @dark-blue--text;
+}
+
+.action-plan__wrapper {
+  width: 320px;
+  margin: 0 auto;
 }
 
 .action-plan__list {
@@ -7,6 +13,7 @@
   flex-direction: column;
   width: 320px;
   margin: 0;
+  margin-top: -80px;
   padding: 0 25px 40px;
 
   list-style: none;
@@ -15,6 +22,28 @@
 
 .action-plan__item {
   position: relative;
+
+  margin-top: -10px;
+  width: 270px;
+  padding: 21px 60px 21px 25px;
+
+  color: @dark-blue--button;
+  .text-list-button;
+  text-decoration: none;
+
+  background-color: @yellow;
+  border-radius: 10px 10px 0 0;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.action-plan__item--step4 {
+  border-radius: 10px;
+}
+
+.action-plan__item::before {
+  position: absolute;
+  right: 23px;
 }
 
 .action-plan__list .action-plan__item--step1 {
@@ -34,33 +63,121 @@
 }
 
 .action-plan__item--step1::before {
-  position: absolute;
-  right: 23px;
-
   content: "1";
   color: white;
 }
 
 .action-plan__item--step2::before {
-  position: absolute;
-  right: 23px;
-
   content: "2";
   color: white;
 }
 
 .action-plan__item--step3::before {
-  position: absolute;
-  right: 23px;
-
   content: "3";
   color: white;
 }
 
 .action-plan__item--step4::before {
-  position: absolute;
-  right: 23px;
-
   content: "4";
   color: white;
+}
+
+@media (min-width: @tablet-width) {
+  .action-plan {
+    width: 768px;
+    background-color: @dark-blue-grey;
+  }
+
+  .action-plan__wrapper {
+    width: 690px;
+    padding-bottom: 95px;
+  }
+
+  .action-plan__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 690px;
+    margin: 0;
+    margin-top: -143px;
+    padding: 0;
+  }
+
+  .action-plan__item {
+    position: relative;
+
+    margin-left: 0;
+
+    width: 345px;
+    padding: 31px 110px 66px 35px;
+    .text-list-button--tablet;
+  }
+
+  .action-plan__item:nth-child(2n) {
+    margin-left: -10px;
+  }
+
+  .action-plan__item::before {
+    left: 35px;
+    bottom: 28px;
+  }
+
+  .action-plan__item--step1 {
+    border-radius: 10px 0 0 0;
+  }
+
+  .action-plan__item--step2 {
+    border-radius: 0 10px 0 0;
+  }
+
+  .action-plan__item--step3 {
+    border-radius: 0 0 0 10px;
+  }
+
+  .action-plan__item--step4 {
+    border-radius: 0 0 10px 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .action-plan {
+    width: 1440px;
+    background-color: @dark-blue;
+  }
+
+  .action-plan__wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-645px, -55px);
+    width: 1290px;
+    padding-bottom: 0;
+  }
+
+  .action-plan__list {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 1290px;
+    margin: 0;
+    margin-top: -143px;
+    padding: 0;
+    padding-left: 40px;
+  }
+
+  .action-plan__item {
+    width: 320px;
+    margin-left: -10px;
+    padding: 31px 85px 35px 30px;
+    border-radius: 10px 0 0 10px;
+  }
+
+  .action-plan__item:last-child {
+    border-radius: 10px;
+  }
+
+  .action-plan__item::before {
+    top: 30px;
+    right: 23px;
+    left: auto;
+    bottom: auto;
+  }
 }
