--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,3 +13,13 @@
   box-sizing: border-box;
   cursor: pointer;
 }
+
+@media (min-width: @tablet-width) {
+  .button {
+    width: 275px;
+    padding: 30px 0 30px 35px;
+
+    .text-list-button--tablet;
+    border-radius: 20px;
+  }
+}
