--- a/source/less/font-face.less
+++ b/source/less/font-face.less
@@ -18,7 +18,7 @@
   font-family: "Blogger Sans";
   src: url("../fonts/bloggersans-light.woff2") format("woff2"),
     url("../fonts/bloggersans-light.woff") format("woff");
-  font-weight: lighter;
+  font-weight: 300;
   font-style: normal;
 }
 
