--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,10 @@
+//переменные размерров экрана
+@tablet-width: 768px;
+@desktop-width: 1200px;
 // файл с переменными
 // цвета для фона основных блоков
 @dark-blue: #161c35;
-
+@dark-blue-grey: #182044; // фон для планшетной версии
 // цвет текста
 @dark-slate-blue: #1d2e5b;
 @dark-blue--text: #192144;
@@ -16,3 +19,4 @@
 @yellow: #ffd74b;
 //серый цвет фона
 @gray: #edeff6;
+@gray-light: #cccccc;
