--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,8 +1,16 @@
 .main-nav {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .main-nav__toggle {
+  position: absolute;
+  top: -50px;
+  left: 265px;
+
   padding: 0;
   margin: 0;
   width: 25px;
@@ -17,14 +25,137 @@
   cursor: pointer;
 }
 
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+    top: -60px;
+    left: 372px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__toggle {
+    top: -60px;
+    left: 300px;
+    width: 60px;
+    height: 2px;
+    background-color: white;
+    background-image: none;
+  }
+}
+
 .main-nav__wrapper {
-  position: absolute;
-  top: 53px;
-  left: -220px;
-
-  display: none;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   width: 320px;
+  margin: 0 auto;
+  padding-right: 25px;
+  padding-left: 25px;
 
+  // display: none;
   background-color: white;
-  z-index: 2;
+  box-sizing: border-box;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__wrapper {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__wrapper {
+    width: 1440px;
+  }
+}
+
+.main-nav__list {
+  .list-style;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 60px auto 55px;
+  width: 270px;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__list {
+    align-items: flex-start;
+
+    margin: 100px 90px 90px;
+    width: 688px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__list {
+    position: absolute;
+    top: -70px;
+    flex-direction: row;
+    width: 688px;
+    margin: 0;
+    padding-left: 405px;
+    padding-right: 25px;
+  }
+}
+
+.main-nav__link {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav__call-us {
+  display: none;
+}
+
+.main-nav__write-us {
+  display: none;
+}
+
+.main-nav__link-login {
+  width: 270px;
+  margin-bottom: 65px;
+  align-self: center;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__link {
+    position: absolute;
+    top: -75px;
+    right: 40px;
+    margin-bottom: 0;
+  }
+
+  .main-nav__link-login {
+    width: 189px;
+    margin-bottom: 0;
+  }
+
+  .main-nav__call-us,
+  .main-nav__write-us {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__link {
+    position: absolute;
+    top: -85px;
+    right: 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__call-us,
+  .main-nav__write-us {
+    display: block;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__contacts.contacts {
+    display: none;
+  }
 }
