--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,17 +1,18 @@
 .page-main {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 320px;
   margin: 0 auto;
-  padding-right: 25px;
-  padding-left: 25px;
+  box-sizing: border-box;
 }
 
 .page-main__wrapper {
   position: relative;
+  width: 320px;
 
-  background-color: @dark-blue;
+  background-color: @dark-blue-grey;
   background-image: url("../img/traveller-illustration-mobile@1x.png"),
     url("../img/globe-back-mobile@1x.jpg");
   background-position: bottom left 50%, bottom 55% left 50%;
@@ -33,4 +34,60 @@
 
   left: 25px;
   bottom: -25px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-main {
+    width: 768px;
+  }
+
+  .page-main__wrapper {
+    width: 768px;
+
+    background-color: @dark-blue-grey;
+    background-image: url("../img/traveller-illustration-tablet@1x.png"),
+      url("../img/globe-back-tablet@1x.jpg");
+    background-position: bottom 142px left 285px, bottom left 50%;
+    background-repeat: no-repeat;
+  }
+
+  .page-main__title {
+    width: 395px;
+    margin: 0 auto;
+    padding: 0 0 628px 0;
+
+    font-size: 60px;
+    line-height: 70px;
+  }
+
+  .page-main__links.links {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main {
+    width: 1440px;
+  }
+
+  .page-main__wrapper {
+    width: 1440px;
+
+    background-color: @dark-blue;
+    background-image: url("../img/traveller-illustration-desktop@1x.png"),
+      url("../img/globe-back-desktop@1x.jpg");
+    background-position: bottom left 610px, bottom left 50%;
+    background-repeat: no-repeat;
+    border-radius: 0 0 50px 50px;
+  }
+
+  .page-main__title {
+    width: 395px;
+    margin: 0;
+    padding: 75px 0 369px 130px;
+
+    font-size: 60px;
+    line-height: 70px;
+    text-align: left;
+  }
 }
