--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  padding: 50px 90px 0 25px;
+  padding: 50px 90px 120px 25px;
   color: white;
   background-color: @dark-blue;
 }
@@ -12,6 +12,7 @@
   padding: 0;
   padding-left: 25px;
   padding-right: 35px;
+  color: white;
   .text-light;
   .margin-text;
 }
@@ -23,4 +24,46 @@
   padding-left: 25px;
   color: white;
   .text-bold;
+}
+
+@media (min-width: @tablet-width) {
+  .review {
+    position: absolute;
+    top: 300px;
+    left: 75px;
+    width: 315px;
+
+    padding: 0;
+    background-color: transparent;
+  }
+
+  .review__text {
+    margin-bottom: 45px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    font-size: 28px;
+    line-height: 33px;
+    font-weight: 300;
+  }
+
+  .review__author {
+    font-size: 21px;
+    line-height: 25px;
+
+    padding-left: 10px;
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .review {
+    position: absolute;
+    top: 125px;
+    left: 1095px;
+    width: 315px;
+
+    padding: 0;
+    background-color: transparent;
+  }
 }
