--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,21 +1,32 @@
-.site-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  margin: 60px 0 55px;
-  padding: 0 0 0 25px;
-  width: 183px;
-
-  list-style-type: none;
-}
+// .site-list {
+//
+// }
 
 .site-list__link {
   color: @dark-blue--text;
   font-size: 30px;
   line-height: 36px;
+  font-style: medium;
   text-align: center;
 
   text-transform: uppercase;
   text-decoration: none;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list__link {
+    font-size: 60px;
+    line-height: 71px;
+    text-align: left;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list__link {
+    margin-right: 35px;
+
+    color: white;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
