--- a/source/less/blocks/contacts-us.less
+++ b/source/less/blocks/contacts-us.less
@@ -1,7 +1,7 @@
 .contacts-us {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 
   width: 320px;
   margin: 0 auto;
@@ -32,10 +32,11 @@
 
 .contacts-us__login {
   position: relative;
+  width: 270px;
 }
 
 .contacts-us__email {
-  width: 270px;
+  width: 100%;
   padding: 22px 20px;
   margin-bottom: 30px;
 
@@ -69,4 +70,87 @@
 
 .contacts-us__links {
   margin-bottom: 10px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts-us {
+    width: 768px;
+    padding-top: 55px;
+    padding-right: 75px;
+    padding-left: 75px;
+
+    border-radius: 0 0 55px 55px;
+  }
+
+  .contacts-us__title {
+    margin: 0 0 60px;
+    padding: 0;
+    .h2-title--tablet;
+  }
+
+  .contacts-us__text {
+    margin: 0;
+    margin-bottom: 70px;
+    .text-light--tablet;
+    text-align: center;
+  }
+
+  .contacts-us__text--br {
+    display: none;
+  }
+
+  .contacts-us__login {
+    width: 536px;
+    margin-bottom: 60px;
+  }
+
+  .contacts-us__email {
+    height: 80px;
+    .text-list-button--tablet;
+  }
+
+  .contacts-us__button {
+    position: absolute;
+    width: 82px;
+    height: 80px;
+  }
+
+  .contacts-us__links {
+    align-self: flex-start;
+
+    margin-bottom: 80px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts-us {
+    width: 1440px;
+    padding-top: 105px;
+    padding-right: 130px;
+    padding-left: 130px;
+  }
+
+  .contacts-us__login {
+    width: 1175px;
+    margin-bottom: 70px;
+  }
+
+  .contacts-us__button {
+    width: 325px;
+    height: 80px;
+    padding: 30px 40px;
+
+    color: @dark-slate-blue;
+    .text-list-button--tablet;
+    background-size: 10px 14px;
+    background-position: center right 35px;
+    margin-bottom: 70px;
+    box-sizing: border-box;
+  }
+
+  .contacts-us__links {
+    align-self: center;
+
+    margin-bottom: 80px;
+  }
 }
