--- a/source/less/blocks/popular-route.less
+++ b/source/less/blocks/popular-route.less
@@ -51,7 +51,7 @@
   padding-bottom: 10px;
 
   background-repeat: no-repeat;
-  border-radius: 15px;
+  border-radius: 25px;
 }
 
 .popular-route__item--thailand {
@@ -68,6 +68,7 @@
 
 .popular-route__item-title {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   margin: 0;
@@ -82,7 +83,7 @@
   padding: 0;
 
   color: @opacity-gray;
-  font-weight: lighter;
+  font-weight: 300;
   font-size: 16px;
   line-height: 18px;
   text-align: left;
@@ -114,6 +115,7 @@
     background-repeat: no-repeat;
     background-position: right 40px top 80px;
     border-radius: 0 0 55px 55px;
+    box-sizing: border-box;
   }
 
   .popular-route__title {
@@ -145,6 +147,10 @@
 
     width: 620px;
     height: 140px;
+    margin-bottom: 10px;
+
+    background-size: contain;
+    box-sizing: border-box;
   }
 
   .popular-route__item--thailand {
@@ -163,9 +169,91 @@
   }
 
   .popular-route__wrapper {
-    width: 375px;
-    padding: 25px 30px 25px 30px;
+    width: 435px;
+    height: 140px;
+    padding: 30px 30px 25px 30px;
     background-color: white;
-    border-radius: 15px 0 0 15px;
+    border-radius: 20px 0 0 20px;
+    box-sizing: border-box;
+  }
+
+  .popular-route__item-title {
+    display: flex;
+    flex-direction: column;
+    height: 90px;
+
+    .h3-title--tablet;
+  }
+
+  .popular-route__item-subscribers {
+    margin-top: auto;
+    order: 3;
+
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .popular-route__item-description {
+    margin-top: 5px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .popular-route__show-all.button {
+    width: 618px;
+    margin-top: 75px;
+    margin-bottom: 80px;
+
+    .text-list-button--tablet;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .popular-route {
+    position: relative;
+    width: 1440px;
+    padding-top: 165px;
+    padding-right: 130px;
+    padding-left: 860px;
+
+    background-image: url("../img/flags-back@1x.png");
+    background-repeat: no-repeat;
+    background-position: right 60px top 90px;
+    border-radius: 0 0 55px 55px;
+  }
+
+  .popular-route__title {
+    padding-left: 0;
+    padding-top: 0;
+    margin-bottom: 60px;
+
+    .h2-title--tablet;
+  }
+
+  .popular-route__text {
+    margin-bottom: 100px;
+  }
+
+  .popular-route__list {
+    position: absolute;
+    top: 160px;
+    left: 130px;
+
+    width: 560px;
+  }
+
+  .popular-route__item {
+    width: 560px;
+  }
+
+  .popular-route__wrapper {
+    width: 375px;
+  }
+
+  .popular-route__show-all.button {
+    width: 275px;
+    margin-top: 0;
   }
 }
