--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -4,12 +4,6 @@
   margin-bottom: 20px;
 }
 
-@media (min-width: @tablet-width) {
-  .contacts {
-    margin-bottom: 110px;
-  }
-}
-
 .contacts__item {
   padding-left: 60px;
   margin-bottom: 30px;
@@ -23,11 +17,28 @@
 }
 
 @media (min-width: @tablet-width) {
+  .contacts {
+    margin-bottom: 110px;
+  }
+
   .contacts__item {
-    padding-left: 185px;
+    padding-left: 90px;
     margin-bottom: 40px;
 
     font-size: 28px;
     line-height: 28px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts {
+    flex-direction: row;
+    margin-bottom: 110px;
+  }
+
+  .contacts__item {
+    padding-left: 90px;
+    margin-bottom: 40px;
+    margin-right: 110px;
   }
 }
