--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -23,3 +23,67 @@
   margin-bottom: 35px;
   border: 3px solid @dark-blue--text;
 }
+
+@media (min-width: @tablet-width) {
+  .map__wrapper {
+    align-items: center;
+    width: 768px;
+    padding: 70px 130px 85px;
+
+    border-radius: 0 0 55px 55px;
+  }
+
+  .map__adress {
+    margin: 0 0 65px;
+    padding: 0;
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .map__make-route {
+    width: 618px;
+    margin-bottom: 0;
+    border: 3px solid @dark-blue--text;
+  }
+
+  .map__container {
+    width: 768px;
+
+    .map__img {
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map__wrapper {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 1440px;
+    padding: 70px 130px 85px;
+
+    border-radius: 0 0 55px 55px;
+  }
+
+  .map__adress {
+    margin: 0 150px 0 0;
+    padding: 0;
+    font-size: 28px;
+    line-height: 28px;
+  }
+
+  .map__make-route {
+    width: 325px;
+    margin-bottom: 0;
+    border: 3px solid @dark-blue--text;
+  }
+
+  .map__container {
+    width: 1440px;
+
+    .map__img {
+      width: 100%;
+    }
+  }
+}
