--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -48,6 +48,7 @@
   font-size: 24px;
   line-height: 24px;
   text-align: left;
+  text-decoration: none;
 }
 //стиль заголовка
 .h2-title {
@@ -73,10 +74,23 @@
   line-height: 21px;
 }
 
+.h3-title--tablet {
+  font-size: 24px;
+  line-height: 24px;
+}
+
 //шрифт ссылок
 .a-text {
   font-size: 16px;
   line-height: 16px;
+  font-weight: bold;
+
+  text-decoration: none;
+}
+
+.a-text--tablet {
+  font-size: 24px;
+  line-height: 24px;
   font-weight: bold;
 
   text-decoration: none;
