--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,6 @@
 .social__list {
   display: flex;
+  justify-content: center;
 
   margin: 0;
   padding: 0;
@@ -33,4 +34,16 @@
 
 .social__link--instagram {
   transform: translate(-9px, -9px);
+}
+
+
+@media (min-width: @tablet-width) {
+  .social__item {
+    position: relative;
+    width: 60px;
+    height: 60px;
+
+    background-color: @yellow;
+    border-radius: 50%;
+  }
 }
