--- a/source/less/blocks/inner-companions.less
+++ b/source/less/blocks/inner-companions.less
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  width: 270px;
+  box-sizing: border-box;
 }
 
 .inner-companions__list {
@@ -91,6 +94,7 @@
 
 .inner-companions__show-more {
   margin: 0;
+  margin-bottom: 25px;
   padding: 0;
 
   color: @dark-slate-blue;
@@ -103,20 +107,68 @@
 
 .inner-companions__button-wrapper {
   display: flex;
+  justify-content: center;
+
+  width: 270px;
+  height: 50px;
+  margin-bottom: 60px;
+
+  border-radius: 40px;
+  background-color: white;
+  box-sizing: border-box;
 }
 
 .inner-companions__prev,
 .inner-companions__next {
-  width: 135px;
-  padding: 15px;
-
+  border: none;
   font-size: 0;
+
+  background-color: white;
 }
 
-.inner-companions__prev {
-  border-radius: 20px 0 0 20px;
+@media (min-width: @tablet-width) {
+  .inner-companions {
+    width: 688px;
+  }
+
+  .inner-companions__list {
+    width: 688px;
+    margin: 40px 0 50px 0;
+  }
+
+  .inner-companions__item {
+    margin-bottom: 30px;
+    padding: 0;
+
+    background-color: white;
+    border-radius: 20px;
+  }
+
+  .inner-companions__show-more {
+    .a-link--tablet;
+    margin-bottom: 55px;
+  }
+
+  .inner-companions__button-wrapper {
+    width: 688px;
+    height: 100px;
+    margin-bottom: 60px;
+
+    border-radius: 20px;
+  }
 }
 
-.inner-companions__next {
-  border-radius: 0 20px 20px 0;
+@media (min-width: @desktop-width) {
+  .inner-companions {
+    width: 950px;
+  }
+
+  .inner-companions__list {
+    width: 950px;
+    margin: 0 0 70px 0;
+  }
+
+  .inner-companions__button-wrapper {
+    width: 950px;
+  }
 }
