--- a/source/less/style.less
+++ b/source/less/style.less
@@ -28,3 +28,4 @@
 @import url("blocks/companions-filter.less");
 @import url("blocks/inner-companions.less");
 @import url("blocks/countries-list.less");
+@import url("blocks/countries-filter.less");
