--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -69,6 +69,13 @@
   text-align: left;
 }
 
+.h2-title--tablet-inner {
+  font-size: 30px;
+  line-height: 30px;
+
+  text-align: left;
+}
+
 .h3-title {
   font-size: 21px;
   line-height: 21px;
@@ -101,4 +108,21 @@
   padding: 0;
 
   list-style: none;
+}
+//стили для ссылок в заголовках и фильтрах
+.a-link {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.a-link--tablet {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: bold;
+  text-align: left;
+  text-transform: uppercase;
+
+  text-decoration: none;
 }
